// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty view with no tab selected 1`] = `
<div
  class="scene mainScene hidden"
>
  <div
    class="header"
  >
    <button
      class="left"
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2 />
    <button
      class="create"
    >
      +
    </button>
  </div>
  <div>
    <div
      class="load-error"
    >
      <img
        alt=""
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        class="create"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`renders missing tab info error 1`] = `
<div
  class="scene mainScene hidden"
>
  <div
    class="header"
  >
    <button
      class="left"
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2 />
    <button
      class="create"
    >
      +
    </button>
  </div>
  <div>
    <div
      class="load-error"
    >
      <img
        alt=""
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        class="create"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`renders summary and transaction list 1`] = `
<div
  class="scene mainScene hidden"
>
  <div
    class="header"
  >
    <button
      class="left"
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      class="create"
    >
      +
    </button>
  </div>
  <div>
    <div
      class="row"
    >
      <div
        id="summary"
      >
        <table
          id="balance"
        >
          <tbody>
            <tr
              style="background-color: rgb(226, 91, 29);"
            >
              <th
                class="account"
              >
                Jan
              </th>
              <td
                class="amount"
              >
                -11.7
              </td>
            </tr>
            <tr
              style="background-color: rgb(92, 226, 14);"
            >
              <th
                class="account"
              >
                Martin
              </th>
              <td
                class="amount"
              >
                11.7
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="row"
    >
      <h3
        class="transactions-heading"
      >
        Transactions
      </h3>
      <div
        id="transactions"
      >
        <div>
          <div>
            <div
              class="dategroup"
            >
              9/20/2020
            </div>
            <div
              class="transaction"
            >
              <table>
                <tbody>
                  <tr>
                    <td
                      class="title"
                    >
                      Gummibärchen
                      <div
                        class="payments"
                      >
                        <strong>
                          Martin: 22.8, 
                        </strong>
                        Jan
                      </div>
                    </td>
                    <td
                      class="total"
                    >
                      22.8
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        class="total-sum"
      >
        Total Spending: 
        22.8
      </div>
    </div>
    <div
      class="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          2
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders tab with no transactions 1`] = `
<div
  class="scene mainScene hidden"
>
  <div
    class="header"
  >
    <button
      class="left"
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      class="create"
    >
      +
    </button>
  </div>
  <div>
    <div
      class="empty-info"
    >
      <p>
        A tab consists of transactions. When you add a transaction you also define the people that are part of it, the participants.
      </p>
      <p>
        Start by adding your first transaction:
      </p>
      <div
        class="row"
      >
        <button
          class="full-width create"
        >
          Add transaction
        </button>
      </div>
    </div>
    <div
      class="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          6
        </code>
      </p>
    </div>
  </div>
</div>
`;
